Fix account menu spacing

--- a/client/src/components/Sidebar/modules/MainMenu.scss
+++ b/client/src/components/Sidebar/modules/MainMenu.scss
@@ -142,22 +142,18 @@
             margin-left: 0.9em;
             font-style: normal;
             font-weight: 700;
-            width: 135px;
+            width: 125px;
             overflow: hidden;
             white-space: nowrap;
             text-overflow: ellipsis;
             position: absolute;
-            left: 50px;  // Width of avatar
+            left: 60px;  // Width of avatar
             transition: left $menu-transition-duration ease;
         }
     }
 
     @at-root .sidebar--slim #{&} {
         width: $menu-width-slim;
-
-        &__account em {
-            left: $menu-width-slim - $menu-width;
-        }
     }
 
     &--open {
@@ -169,6 +165,6 @@
     }
 
     &--open &__account em {
-        left: 50px !important;  // Override collapsed style
+        left: 60px !important;
     }
 }
